--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,3 +13,17 @@
 .basic{
     display:flex;
 }
+
+.profile-card{
+    width: 500px;
+}
+.avatar{
+    margin-bottom: 1.5rem;
+}
+.username{
+    text-transform: capitalize;
+}
+.profile-btn{
+    margin-top: 1.3rem;
+    width: 100%;
+}
