--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,29 +1,62 @@
-.dashboard{
-    display:flex;
-    gap:20px;
-}
-.dashboard--contents{
-    background:#fff;
-    flex: 1;
-    border-radius: 20px;
-    padding:2rem;
-    display:flex;
-    gap:1.5rem;
-}
-.basic{
-    display:flex;
+/* #root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
 }
 
-.profile-card{
-    width: 500px;
+.logo {
+  height: 6em;
+  padding: 1.5em;
+  will-change: filter;
+  transition: filter 300ms;
 }
-.avatar{
-    margin-bottom: 1.5rem;
+.logo:hover {
+  filter: drop-shadow(0 0 2em #646cffaa);
 }
-.username{
-    text-transform: capitalize;
+.logo.react:hover {
+  filter: drop-shadow(0 0 2em #61dafbaa);
 }
-.profile-btn{
-    margin-top: 1.3rem;
-    width: 100%;
+
+@keyframes logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  a:nth-of-type(2) .logo {
+    animation: logo-spin infinite 20s linear;
+  }
+}
+
+.card {
+  padding: 2em;
+}
+
+.read-the-docs {
+  color: #888;
+}
+ */
+
+.dashboard {
+  display: flex;
+  gap: 20px;
+  padding: 20px;
+}
+
+.dashboard--contents {
+  background: #fff;
+  flex: 1;
+  border-radius: 20px;
+  padding: 2rem;
+  display: flex;
+  gap: 1.5rem;
+}
+
+.basic {
+  display: flex;
 }
