--- a/frontend/src/styles/Table.css
+++ b/frontend/src/styles/Table.css
@@ -80,4 +80,53 @@
       width: 100%;
     }
   }
-  
+ 
+/* Style for the modal */
+/* Style for the modal */
+.modal {
+  display: block;
+  position: fixed;
+  z-index: 9999;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* semi-transparent black */
+  overflow: auto;
+}
+
+/* Style for the modal content */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 500px;
+}
+
+/* Style for the close button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+.modal-heading {
+  padding:5px 0px;
+  color: #526d82; /* Change to your desired font color */
+}
+
+/* Style for the modal labels */
+.modal-label {
+  color: #526d82; /* Change to your desired font color */
+}
+
+
