admin almost cmplt

--- a/frontend/src/styles/Registration.css
+++ b/frontend/src/styles/Registration.css
@@ -31,6 +31,8 @@ label {
 input[type="text"],
 input[type="email"],
 input[type="password"],
+input[type="number"],
+input[type="date"],
 select {
     width: 100%;
     padding: 10px;
