--- a/frontend/src/styles/contents.css
+++ b/frontend/src/styles/contents.css
@@ -53,6 +53,7 @@
     gap:20px;
     align-items:center;
     margin-top:2rem;
+    flex-wrap:wrap;
 }
 .card{
     flex:1;
@@ -63,6 +64,7 @@
     align-items:center;
     flex-direction:column;
     gap:20px;
+    flex-basis:calc(33.3%-20px);
     transition:0.5s ease-in-out;
 }
 .card:hover{
