--- a/frontend/src/styles/quiz.css
+++ b/frontend/src/styles/quiz.css
@@ -66,3 +66,11 @@ select {
   align-items: center;
   justify-content: center;
 }
+
+.table {
+  min-width: 500px;
+}
+
+.button {
+  bottom: 10px;
+}
